<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="com.example.interfaces.MenuPrincipal">

    <TextView
        android:id="@+id/menuSopa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="209dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:gravity="center"
        android:text="@string/menuSopas"
        android:textColor="#FFEB3B"
        android:textSize="22sp"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="77dp" />

    <Button
        android:id="@+id/butonSopaArroz"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"


        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="87dp"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="255dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginBottom="30dp"
        android:background="@android:color/holo_green_dark"

        android:filterTouchesWhenObscured="true"
        android:text="@string/SopaArroz"
        android:textColor=" #FFEB3B"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="211dp" />

    <Button

        android:id="@+id/buttonAjiaco"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_below="@id/butonSopaArroz"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="87dp"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginBottom="30dp"
        android:background="@android:color/holo_green_dark"
        android:filterTouchesWhenObscured="true"

        android:text="@string/Ajiaco"
        android:textColor=" #FFEB3B"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="158dp" />

    <Button
        android:id="@+id/butonSopaPasta"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_below="@id/buttonAjiaco"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"

        android:layout_marginStart="87dp"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginBottom="30dp"
        android:background="@android:color/holo_green_dark"
        android:filterTouchesWhenObscured="true"
        android:onClick="irAlimentos"
        android:text="@string/SopaPasta"
        android:textColor=" #FFEB3B"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="394dp" />

    <Button
        android:id="@+id/butonSopaTomate"
        android:layout_width="239dp"
        android:layout_height="60dp"
        android:layout_below="@id/butonSopaPasta"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"

        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/holo_green_dark"
        android:filterTouchesWhenObscured="true"
        android:text="@string/SopaTomate"
        android:onClick="irConsejos"
        android:textColor=" #FFEB3B"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="549dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="178dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        app:srcCompat="@drawable/logo_png" />




</RelativeLayout>