<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="com.example.interfaces.MenuPrincipal">

    <TextView
        android:id="@+id/menuPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="209dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:gravity="center"
        android:text="@string/menuPrincipal"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="22sp"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="77dp" />

    <Button
        android:id="@+id/butonRecetas"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"

        android:onClick="irRecetas"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="87dp"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="255dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginBottom="30dp"
        android:background="#FFEB3B"
        android:filterTouchesWhenObscured="true"
        android:text="@string/recetas"
        android:textColor="@android:color/holo_green_dark"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="211dp" />

    <Button
        android:id="@+id/buttonSeleccionarPlatillo"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_below="@id/butonRecetas"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="87dp"

        android:layout_marginLeft="87dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginBottom="30dp"
        android:background="#FFEB3B"
        android:filterTouchesWhenObscured="true"
        android:onClick="irPlato"
        android:text="@string/seleccionarPlatillo"
        android:textColor="@android:color/holo_green_dark"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="158dp" />

    <Button
        android:id="@+id/butonAlimentos"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_below="@id/buttonSeleccionarPlatillo"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"

        android:layout_marginStart="87dp"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginBottom="30dp"
        android:background="#FFEB3B"
        android:filterTouchesWhenObscured="true"
        android:onClick="irAlimentos"
        android:text="@string/alimentos"
        android:textColor="@android:color/holo_green_dark"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="394dp" />

    <Button
        android:id="@+id/butonconsejos"
        android:layout_width="239dp"
        android:layout_height="60dp"
        android:layout_below="@id/butonAlimentos"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"

        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginBottom="20dp"
        android:background="#FFEB3B"
        android:filterTouchesWhenObscured="true"
        android:text="@string/consejos"
        android:onClick="irConsejos"
        android:textColor="@android:color/holo_green_dark"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="549dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="178dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        app:srcCompat="@drawable/logo_png" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="334dp"
        android:layout_marginRight="334dp"
        android:onClick="irPanelUsuario"
        app:srcCompat="@drawable/menu_hamburguesa" />


</RelativeLayout>